# tsmart_ha

./: .devcontainer.json  Dockerfile  LICENSE  README.md  hacs.json  pyproject.toml  renovate.json  requirements.txt
.github/: dependabot.disabled
.github/workflows/: lint.yml  release.yml  validate-hassfest.yml
custom_components/t_smart/: __init__.py  binary_sensor.py  button.py  climate.py  common.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  icons.json  manifest.json  sensor.py  tsmart.py
custom_components/t_smart/translations/: en.json  pt.json
