[project]
name = "tsmart_ha"
version = "0.0.0"
description = "tsmart_ha - Support for Tesla T-Smart and other EUROICC water heaters in Home Assistant"
authors = [{ email = "Andrew Jackson <andrew@codechimp.org>" }]
maintainers = [{ email = "Andrew Jackson <andrew@codechimp.org>" }]

readme = "README.md"
license = "MIT"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3",
]
requires-python = "==3.13.2"
dependencies = [] # Use dev for all dependencies

[project.urls]
documentation = "https://github.com/andrew-codechimp/tsmart_ha"
homepage = "https://github.com/andrew-codechimp/tsmart_ha"
repository = "https://github.com/andrew-codechimp/tsmart_ha"
"Bug Tracker" = "https://github.com/andrew-codechimp/tsmart_ha/issues"
Changelog = "https://github.com/andrew-codechimp/tsmart_ha/releases"

[dependency-groups]
dev = [
    "asyncio-dgram",
    "awesomeversion",
    "colorlog",
    "homeassistant==2025.9.0",
    "mypy",
    "ruff",
    "voluptuous",
]

[tool.uv]
default-groups = ["dev"]
override-dependencies = [
    "aiodns==3.2.0",
]
[tool.ruff]
target-version = "py313"
src = ["custom_components/t_smart"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
line-ending = "auto"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # Annotation and type hint rules
  "ANN001",  # Missing type annotation for function argument
  "ANN201",  # Missing return type annotation for public function
  "ANN202",  # Missing return type annotation for private function
  "ANN204",  # Missing return type annotation for special method
  "ANN401",  # Disallowing dynamically typed expressions (too strict)

  # Docstring convention conflicts
  "D100",   # Missing docstring in public module
  "D101",   # Missing docstring in public class
  "D102",   # Missing docstring in public method
  "D107",   # Missing docstring in __init__
  "D202",   # No blank lines allowed after function docstring
  "D203",   # 1 blank line required before class docstring
  "D213",   # Multi-line docstring summary should start at the second line
  "D404",   # First word of the docstring should not be "This"
  "D406",   # Section name should end with a newline
  "D407",   # Section name underlining
  "D411",   # Missing blank line before section

  # Style/tidiness adjustments
  "TID252", # Relative imports
  "E731",   # Do not assign a lambda expression, use a def

  # Formatting conflicts (black/ruff fmt)
  "COM812",
  "COM819",
  "D206",
  "E501",   # Line too long (handled by formatter)
  "ISC001",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "W191",
  "RUF012", # Broken rule in some cases

  # Project preference
  "ERA001",  # Found commented-out code
  "RUF001",  # String contains ambiguous character
  "S101",    # Use of assert detected
  "TC001",   # Move application import into type checking
  "TC003",   # Move standard library import into a type-checking block
  "TC006",   # Add quotes to type expression in typing.cast()
  "TRY003",  # Avoid specifying long messages outside the exception class
  "TRY400",  # Use `logging.exception` instead of `logging.error`

  # TODO: Fix these warnings
  "ANN003",   # Missing type annotation for **kwargs
  "ARG001",   # Unused function argument
  "ARG004",   # Unused static method argument
  "ASYNC109", # Async function definition with a timeout parameter
  "B007",     # Loop control variable not used within loop body
  "C408",     # Unnecessary dict() call (rewrite as a literal)
  "EM101",    # Exception must not use a string literal
  "EM102",    # Exception must not use an f-string literal
  "F841",     # Local variable assigned to but never used
  "FBT002",   # Boolean default positional argument in function definition
  "FBT003",   # Boolean positional value in function call
  "G002",     # Logging statement uses %
  "G010",     # Logging statement uses warn instead of warning
  "I001",     # Import block is un-sorted or un-formatted
  "N805",     # First argument of a method should be named self
  "PGH003",   # Use specific rule codes when ignoring type issues
  "PLR2004",  # Magic value used in comparison
  "PLW2901",  # for loop variable overwritten by assignment target
  "RUF059",   # Unpacked variable is never used
  "UP031",    # Use format specifiers instead of percent format
]


[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.isort]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
known-first-party = ["homeassistant"]
combine-as-imports = true

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"homeassistant.helpers.area_registry" = "ar"
"homeassistant.helpers.config_validation" = "cv"
"homeassistant.helpers.device_registry" = "dr"
"homeassistant.helpers.entity_registry" = "er"
"homeassistant.helpers.issue_registry" = "ir"
voluptuous = "vol"

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
python_version = "3.13"
platform = "linux"

# show error messages from unrelated files
follow_imports = "normal"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# be strict
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

# TODO: Fix these ignored errors
disable_error_code = [
    "no-untyped-def",
    "assignment",
    "call-arg",
    "arg-type",
    "index",
    "override",
    "return-value",
]

# Files to check
files = ["custom_components/t_smart"]

# Exclude patterns
exclude = [
    "^config/",
    "^scripts/",
]
